--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,1 +1,12 @@
-<p>shared works!</p>
+<h2>Form</h2>
+<app-button (click)="onPatchValue()">Patch Value</app-button>
+
+<form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
+  <app-form-field>
+    <app-input formControlName="input"></app-input>
+  </app-form-field>
+</form>
+
+<code>
+  {{ form.value | json }}
+</code>
