--- a/src/app/pages/demo/pages/shared/shared.component.html
+++ b/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,9 +1,24 @@
 <h2>Form</h2>
-<app-button (click)="onPatchValue()">Patch Value</app-button>
-
 <form [formGroup]="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()">
-  <app-form-field>
+  <app-button (click)="onPatchValue()">Patch Value</app-button>
+  <app-button (click)="onToggleInline()">Toggle Inline</app-button>
+  <br/><br/><br/>
+
+  <app-form-field
+    label="Input"
+    [required]="true"
+    [control]="form.controls['input']"
+    [patternError]="regexErrors.numbers"
+    [isInline]="isInline">
     <app-input formControlName="input"></app-input>
+  </app-form-field>
+
+  <app-form-field
+    label="Password"
+    [required]="true"
+    [control]="form.controls['password']"
+    [isInline]="isInline">
+    <app-password formControlName="password"></app-password>
   </app-form-field>
 </form>
 
