--- a/src/app/shared/controls/form-field/form-field.component.html
+++ b/src/app/shared/controls/form-field/form-field.component.html
@@ -1,6 +1,6 @@
 <div class="form-field" [class.form-field_error]="hasError()" [class.form-field_inline]="isInline">
     <label class="form-field__label">
-        {{ label }}
+      {{ label }}
         <span class="form-field__req" *ngIf="required">*</span>
     </label>
 
@@ -8,7 +8,22 @@
         <ng-content></ng-content>
 
         <div class="form-field__error">
-
+          <ng-container *ngIf="control && errorKey" [ngSwitch]="errorKey">
+            <span *ngSwitchCase="'min'">Minimum {{ control.errors ? control.errors[errorKey].min : null }}</span>
+            <span *ngSwitchCase="'max'">Maximum {{ control.errors ? control.errors[errorKey].max : null }}</span>
+            <span *ngSwitchCase="'required'">This field is required</span>
+            <span *ngSwitchCase="'requiredtrue'">This field is required</span>
+            <span *ngSwitchCase="'minlength'">
+              At least {{ control.errors ? control.errors[errorKey].requiredLength : null }} characters
+            </span>
+            <span *ngSwitchCase="'maxlength'">
+              No more than {{ control.errors ? control.errors[errorKey].requiredLength : null }} characters
+            </span>
+            <span *ngSwitchCase="'pattern'">
+              <span *ngIf="patternError">{{ patternError }}</span>
+              <span *ngIf="!patternError">Pattern does not match</span>
+            </span>
+          </ng-container>
         </div>
     </div>
 
