--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -1,6 +1,6 @@
 <input type="text" class="app-input"
        [value]="value"
-       [placeholder]="placeholder || ''"
+       [placeholder]="placeholder || 'Input'"
        [attr.disabled]="isDisabled ? true : null"
        (keyup)="onKeyup($event)"
        (blur)="onBlur()"
