--- a/src/app/shared/controls/autocomplete/autocomplete.component.html
+++ b/src/app/shared/controls/autocomplete/autocomplete.component.html
@@ -1,1 +1,18 @@
-<p>autocomplete works!</p>
+<div class="autocomplete">
+  <input type="text" class="app-input" #search
+    [placeholder]="placeholder || 'Pick one'"
+    [formControl]="formControl"
+    [matAutocomplete]="auto"
+    (blur)="onBlur()">
+  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+    <mat-option *ngFor="let option of options$ | async" [value]="option">
+      <div class="option">
+        <div class="option__icon" *ngIf="option.icon" >
+          <span [ngClass]="option.icon?.cssClass"></span>
+<!--          <img [src]="" alt="">-->
+        </div>
+        <div class="option__label" [innerHTML]="option.label | highlight : search.value"></div>
+      </div>
+    </mat-option>
+  </mat-autocomplete>
+</div>
